[package]
name = "ltc2983"
version = "0.1.0"
edition = "2021"
authors = [ "ju6ge <judge@felixrichter.tech>" ]
license = "European Union Public License 1.2"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "=1.0.0-alpha.9"
