[package]
name = "ltc2983"
description = "A create to provide an implementation of the communication with the `LTC2983` (Multi Sensor High Accuracy Digital Temperature Measurement System)"
repository = "https://github.com/ju6ge/ltc2983"
homepage = "https://github.com/ju6ge/ltc2983"
version = "0.1.0"
edition = "2021"
authors = [ "ju6ge <judge@felixrichter.tech>" ]
license = "EUPL-1.2"
keywords = [ "embedded-hal", "spi", "driver" ]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytebuffer = "2.1.0"
embedded-hal = "=1.0.0-alpha.9"
fixed = "1.21.0"
